--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,8 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="626761">  <td>23/02/11 16:19:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PostAPITest.setUp()[pri:0, instance:tests.PostAPITest@36060e]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@893591815</td>   <td></td> </tr>
-<tr bgcolor="626761">  <td>23/02/11 16:19:36</td>   <td>3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PostAPITest.postAPITest()[pri:0, instance:tests.PostAPITest@36060e]">postAPITest</td> 
-  <td>main@893591815</td>   <td></td> </tr>
+<tr bgcolor="dba6dc">  <td>23/08/02 11:16:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;GetAPITest.setUp()[pri:0, instance:tests.GetAPITest@35645047]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@172678484</td>   <td></td> </tr>
+<tr bgcolor="dba6dc">  <td>23/08/02 11:16:02</td>   <td>4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetAPITest.getAPITestWithoutHeaders()[pri:1, instance:tests.GetAPITest@35645047]">getAPITestWithoutHeaders</td> 
+  <td>main@172678484</td>   <td></td> </tr>
+<tr bgcolor="dba6dc">  <td>23/08/02 11:16:02</td>   <td>297</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;GetAPITest.setUp()[pri:0, instance:tests.GetAPITest@35645047]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@172678484</td>   <td></td> </tr>
+<tr bgcolor="dba6dc">  <td>23/08/02 11:16:02</td>   <td>297</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetAPITest.getAPITestWithHeaders()[pri:2, instance:tests.GetAPITest@35645047]">getAPITestWithHeaders</td> 
+  <td>main@172678484</td>   <td></td> </tr>
+<tr bgcolor="dba6dc">  <td>23/08/02 11:16:02</td>   <td>373</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;GetAPITest.setUp()[pri:0, instance:tests.GetAPITest@35645047]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@172678484</td>   <td></td> </tr>
+<tr bgcolor="dba6dc">  <td>23/08/02 11:16:02</td>   <td>374</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetAPITest.getUserStatus()[pri:3, instance:tests.GetAPITest@35645047]">getUserStatus</td> 
+  <td>main@172678484</td>   <td></td> </tr>
+<tr bgcolor="dba6dc">  <td>23/08/02 11:16:02</td>   <td>810</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;GetAPITest.setUp()[pri:0, instance:tests.GetAPITest@35645047]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@172678484</td>   <td></td> </tr>
+<tr bgcolor="dba6dc">  <td>23/08/02 11:16:02</td>   <td>811</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetAPITest.urlValidation()[pri:4, instance:tests.GetAPITest@35645047]">urlValidation</td> 
+  <td>main@172678484</td>   <td></td> </tr>
 </table>
